tried some solutions to fix spacing issue in mobile about page

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -43,15 +43,16 @@
 }
 
 /* svg images */
+.svg-images{
+  margin: 0;
+}
 
 .svg-images img {
-  width: 60px;
+  width: 7%;
   height: auto;
-}
-
-.svg-images img{
   animation: bounce 1s infinite;
 }
+
 
 /* svg images bouncing effect */
 
@@ -95,11 +96,16 @@
 }
 
 @media only screen and (max-width: 930px){
-  .about-contents {
-    padding: 20px;
-  }
-  .svg-images img {
-    width: 45px;
-    height: auto;
-  }
+    .about-contents {
+      padding: 20px;
+    }
+
+    .about-contents p {
+      padding: 0px;
+    }
+
+    .svg-images img {
+      width: 9%;
+    }
+
 }
